--- a/app/views/bubbles/_form.html.erb
+++ b/app/views/bubbles/_form.html.erb
@@ -11,14 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :text %><br />
-    <%= f.text_field :text %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </div>
+    <div class="field">
+      <%= f.label :text %><br />
+      <%= f.text_field :text %>
+    </div>
+
+    <%= f.hidden_field :project_id %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
