applied support for i18n created subfolders in config/locale for models and views

--- a/app/views/bubbles/_form.html.erb
+++ b/app/views/bubbles/_form.html.erb
@@ -19,6 +19,6 @@
     <%= f.hidden_field :project_id %>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t('bubbles.forms.submit_text') %>
   </div>
 <% end %>
