--- a/app/views/bubbles/_form.html.erb
+++ b/app/views/bubbles/_form.html.erb
@@ -1,24 +1,34 @@
 <%= form_for(@bubble) do |f| %>
-  <% if @bubble.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@bubble.errors.count, "error") %> prohibited this bubble from being saved:</h2>
+    <% if @bubble.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@bubble.errors.count, "error") %> prohibited this bubble from being saved:</h2>
 
-      <ul>
-      <% @bubble.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+          <ul>
+            <% @bubble.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
 
     <div class="field">
-      <%= f.label :text %><br />
-      <%= f.text_field :text %>
+      <%= f.label :text, t('bubbles.forms.whats_new') %>
+      <br/>
+      <%= f.text_area :text %>
     </div>
+
+    <script type="text/javascript">
+        $(function() {
+            $("#bubble_text").charCount({
+                allowed: 142,
+                warning: 20            
+            });
+        });
+    </script>
 
     <%= f.hidden_field :project_id %>
 
-  <div class="actions">
-    <%= f.submit t('bubbles.forms.submit_text') %>
-  </div>
+    <div class="actions">
+      <%= f.submit t('bubbles.forms.submit_text') %>
+    </div>
 <% end %>
