--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <title>Sodium</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js" %>
+  <%= javascript_include_tag "jquery.charCount" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
@@ -47,41 +49,6 @@
         <% Project.all(:limit => 5, :order => 'created_at DESC').each do |p| %>
             <%= render :partial => '/projects/project', :locals => {:project => p} %>
         <% end %>
-      </ul>
-
-      <h3>Menu Navigation</h3>
-      <ul>
-        <li><a href="#">Proin at</a></li>
-        <li><a href="#">Class aptent taciti</a></li>
-        <li><a href="#">Morbi in dolor</a></li>
-        <li><a href="#">Praesent ultricies</a></li>
-        <li><a href="#">Aenean euismod</a></li>
-
-        <li><a href="#">Donec sempe</a></li>
-        <li><a href="#">Suspendisse potenti</a></li>
-      </ul>
-
-      <h3>Useful Resources</h3>
-      <ul>
-        <li><a href="#">Praesent ultricies</a></li>
-        <li><a href="#">Aenean euismod</a></li>
-        <li><a href="#">Donec sempe</a></li>
-        <li><a href="#">Suspendisse potenti</a></li>
-
-        <li><a href="#">Proin at</a></li>
-        <li><a href="#">Class aptent taciti</a></li>
-      </ul>
-
-      <h3>Another List</h3>
-      <ul>
-        <li><a href="#">Proin at</a></li>
-        <li><a href="#">Class aptent taciti</a></li>
-        <li><a href="#">Morbi in dolor euismod</a></li>
-        <li><a href="#">Aenean euismod aptent</a></li>
-
-        <li><a href="#">Donec sempe</a></li>
-        <li><a href="#">Suspendisse potenti</a></li>
-        <li><a href="#">Proin at aptent donec</a></li>
       </ul>
 
     </div>
