Users can now follow projects. Added follow/unfollow actions in projects_controller Added uniqueness validation in membership model Fixed has_many :through association statement to new rails 3 syntax in project model Fixed has_many :through association statement to new rails 3 syntax in user model Added has_many :memberships association in user model Added a method follows_project? in user model Added Buttons to follow/unfollow in project show view Added new translation strings for following/unfollowing for :de, :en Added new seeds for following/unfollowing
This commit fixes #20.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,10 @@
-<p id="notice"><%= notice %></p>
+<p>
+  <% if current_user.follows_project? @project %>
+    <%= button_to t('projects.unfollow'), unfollow_project_path(:id => @project.id) %>
+  <% else %>
+    <%= button_to t('projects.follow'), follow_project_path(:id => @project.id) %>
+  <% end %>
+</p>
 
 <%= render 'bubbles/form' %>
 
