--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing project</h1>
 
 <%= render 'form' %>
-
+<%= render 'membership_form' %>
 <%= link_to 'Show', @project %> |
 <%= link_to 'Back', projects_path %>
