--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,12 @@
+<% content_for :sidebar do %>
+    <ul>
+      <li>
+        <%= link_to t('projects.edit'), edit_project_path(@project) %>
+      </li>
+    </ul>
+<% end %>
+
+
 <p>
   <% if current_user.follows_project? @project %>
     <%= button_to t('projects.unfollow'), unfollow_project_path(:id => @project.id) %>
