--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,6 +7,7 @@
 <% end %>
 
 
+<%= image_tag @project.avatar_url(:thumb).to_s %>
 <p>
   <% if current_user.follows_project? @project %>
     <%= button_to t('projects.unfollow'), unfollow_project_path(:id => @project.id) %>
