--- a/app/views/users/_avatar.html.erb
+++ b/app/views/users/_avatar.html.erb
@@ -1,5 +1,9 @@
 <a href="">
-    <%= image_tag user.gravatar_url, :class => "avatar" %>
+  <% if user.avatar_url(:thumb) %>
+      <%= image_tag user.avatar_url(:thumb), :class => "avatar" %>
+  <% else %>
+      <%= image_tag user.gravatar_url, :class => "avatar" %>
+  <% end %>
 </a>
 
 <% unless current_user.nil? %>
