--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<h1>Follow your favourite projects</h1>
+<p>Instant updates from your favourite projects.</p>
 <%= link_to 'timeline', "timeline/index" %>
